# lstm-noisy-signal-filter

./: .env.example  .flake8  .gitignore  README.md  env.example  pyproject.toml  requirements.txt  train.py
config/: default.yaml  experiment.yaml
docs/: ADR.md  ARCHITECTURE.md  CLI_USAGE_GUIDE.md  EXPERIMENTS.md  EXTENSIBILITY.md  FINAL_QA_REPORT.md  NOTEBOOK_VERIFICATION.md  PRD.md  PROMPTS.md  TESTING.md  TEST_COVERAGE.md  TEST_COVERAGE_REPORT.md  WORKFLOW_GUIDE.md
examples/: custom_signal_generator.py
notebooks/: analysis.ipynb
outputs/: results_summary.json
outputs/datasets/: test_data_seed42.pt  train_data_seed11.pt
outputs/models/: lstm_l1_epoch100.pth  lstm_l1_epoch100_final.pth  lstm_l1_epoch160.pth  lstm_l1_epoch20.pth  lstm_l1_epoch200_final.pth  lstm_l1_epoch40.pth  lstm_l1_epoch60.pth  lstm_l1_epoch80.pth
src/: __init__.py
src/config/: __init__.py  config_loader.py  config_validator.py  env_resolver.py
src/data/: __init__.py  data_utils.py  dataset.py  generator.py
src/models/: __init__.py  lstm_filter.py  model_factory.py
src/pipeline/: __init__.py  train_pipeline.py  visualization_pipeline.py
src/training/: __init__.py  checkpoint_manager.py  evaluator.py  frequency_metrics.py  prediction_generator.py  trainer.py  training_utils.py  validator.py
src/visualization/: __init__.py  freq_domain_plots.py  frequency_plots.py  model_plots.py  plot_utils.py  prediction_plots.py  signal_plots.py  time_domain_plots.py  training_plots.py
tests/: __init__.py  test_config.py  test_data_generator.py  test_dataset.py  test_model.py  test_pipeline.py  test_training.py  test_visualization.py
